@@ -1,7 +1,9 @@
 2018-06-13  Niels Möller  <nisse@lysator.liu.se>
 
 	* mpn/generic/gcd_1.c (mpn_gcd_1): Delete unused code variant for
-	GCD_1_METHOD == 1, and delete GCD_1_METHOD macro.
+	GCD_1_METHOD == 1, and delete GCD_1_METHOD macro. Simplify the
+	structure of the remaining code variant, without gotos to the
+	mid-loop strip_u_maybe label.
 
 2018-05-29  Torbjörn Granlund  <tg@gmplib.org>
 
